--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://www.owo.quest/dvd.css">
+    <link rel="stylesheet" href="index.css">
 	</head>
   <body>
 	  <div id="dvd"></div>
-		<script src="https://www.owo.quest/dvd.js"></script>
+		<script src="index.js"></script>
 	</body>
 </html>
