--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+	      <meta property="og:image" content="https://github.com/French-Cat.png">
+    <meta property="og:type" content="video.other">
+    <meta property="og:video:url" content="https://www.youtube-nocookie.com/embed/U8raN16vEnk">
+    <meta property="og:video:width" content="3840">
+    <meta property="og:video:height" content="2160">
     <link rel="stylesheet" href="index.css">
 	</head>
   <body>
