--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	      <meta property="og:image" content="https://github.com/French-Cat.png">
+	      <meta property="og:image" content="https://cdn.discordapp.com/emojis/926222260744884224.gif?size=1024&quality=lossless">
     <meta property="og:type" content="video.other">
     <meta property="og:video:url" content="https://www.youtube-nocookie.com/embed/U8raN16vEnk">
     <meta property="og:video:width" content="3840">
